--- a/PunchChamp.csproj
+++ b/PunchChamp.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Cocona" Version="2.2.0" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
+    <PackageReference Include="Spectre.Console" Version="0.48.0" />
   </ItemGroup>
 
 </Project>
